# rag-docs-assistant

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_storage_key.py  003_add_chunks_table.py
app/: config.py  database.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: documents.py  match.py  webhook.py
app/models/: document.py
app/schemas/: __init__.py  document.py
app/services/: __init__.py  chunking.py  document_ingestion.py  embedding.py  rag.py  storage.py
app/services/ai/: __init__.py  exceptions.py  factory.py  graph.py  interfaces.py
app/services/ai/providers/: __init__.py  cohere_embedding.py  groq_chat.py  ollama_embedding.py  openai_chat.py  openai_embedding.py
app/static/demo/: app.js  index.html  style.css
deploy/api/: entrypoint.sh
deploy/caddy/: Caddyfile  Caddyfile.production
deploy/ollama/: Dockerfile  entrypoint.sh
deploy/squid/: squid.conf
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: AboutAuthor.vue  ActionPanel.vue  ResultCard.vue  UploadSection.vue
frontend/src/composables/: useMatchStore.js
postman/: rag-docs-assistant.postman_collection.json
scripts/: ensure-embedding-model.sh  start-backend.sh
tests/: test_documents.py
