[project]
name = "rag-docs-assistant"
version = "0.1.0"
description = "RAG API with FastAPI, pgvector, Ollama/Groq provider abstraction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"fastapi",
	"uvicorn[standard]",
	"sqlalchemy",
	"greenlet",
	"asyncpg",
	"psycopg2-binary",
	"alembic",
	"pgvector",
	"pydantic",
	"pydantic-settings",
	"miniopy-async",
	"pypdf",
	"python-multipart",
	"httpx",
	"tenacity",
]

[dependency-groups]
dev = [
	"pytest",
	"pytest-asyncio",
	"ruff",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
	"alembic/versions",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
